endpoint EmploymentStatus get y post
